container media fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10014,10 +10014,14 @@ form * {
 .btn-secondary-full {
   background-color: #005fdc; }
 
+@media (min-width: 768px) {
+  .container {
+    width: 100%; } }
+
 @media (min-width: 992px) {
   .container {
     width: 100%; } }
 
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
   .container {
-    width: 100%; } }
+    width: 1170px; } }
