--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8709,6 +8709,8 @@ button.close {
       width: 135px;
       height: 135px;
       background-color: rgba(237, 56, 63, 0.8); }
+    .cashback__text-wrapper img {
+      max-width: 100%; }
   .cashback__header {
     display: block;
     position: relative;
@@ -8759,10 +8761,13 @@ button.close {
     position: relative;
     z-index: 1;
     display: block;
-    width: 390px;
     font-size: 18px;
     line-height: 41px;
     font-family: SFUIBold; }
+    @media (max-width: 768px) {
+      .cashback__advantages {
+        font-size: 14px;
+        line-height: 20px; } }
   .cashback__red {
     position: relative;
     z-index: -1;
@@ -8776,6 +8781,10 @@ button.close {
       width: calc(100% + 20px);
       height: 35px;
       background-color: #ed383f; }
+    @media (max-width: 768px) {
+      .cashback__red::before {
+        top: 0;
+        height: 20px; } }
   .cashback__dashed {
     display: inline-block;
     border-bottom: 1px dashed #fff; }
@@ -9160,6 +9169,13 @@ button.close {
   position: relative;
   padding-top: 70px;
   margin-bottom: 120px; }
+  @media (max-width: 768px) {
+    .condition {
+      width: 100%;
+      margin-bottom: 60px;
+      padding-top: 0;
+      padding-left: 10px;
+      text-align: center; } }
   .condition::before {
     content: '';
     position: absolute;
@@ -9180,6 +9196,9 @@ button.close {
     max-width: 300px;
     font-size: 16px;
     font-family: SFUIMedium; }
+    @media (max-width: 768px) {
+      .condition__description {
+        max-width: none; } }
 
 .condition--reload {
   width: 280px;
@@ -9371,7 +9390,6 @@ button.close {
   .about__underheader {
     font-size: 30px; }
   .about__text {
-    width: 550px;
     padding-top: 15px;
     font-size: 14px;
     line-height: 24px; }
@@ -9388,10 +9406,12 @@ button.close {
       flex-shrink: 0;
   width: 100%;
   height: 220px;
-  background-position: center; }
+  background-position: center;
+  background-size: contain; }
 
-.dignity__text-wrapper {
-  width: 100%; }
+@media (max-width: 768px) {
+  .dignity__text-wrapper {
+    text-align: center; } }
 
 .dignity__header {
   margin-bottom: 20px;
